# bqotd

./: .gitignore  README.md  main.py  pyproject.toml  quotes.json
bqotd/: __main__.py  main.py  quotes.json
src/bqotd/: __init__.py  quotes.json
